2015-11-28  Simon Pfreundschuh   <simonpf@chalmers.se>

	* arts-2-3-370
	
	* src/blas.h: Added declaration for dgemv_

	* src/lapack.h: Header file with LAPACK function declarations.

	* src/lin_alg.*: Changed ludcmp(...), lubacksub(...), solve(...) and
	inv(...) to use LAPACK. This involved changing the ludcmp interface to
	require a reference to a Matrix object to be passed instead of a
	MatrixView.

	* src/matpackI.h: Added mult(...), mult_general(...), ludcmp(...),
	lubacksub(...) and inv(...) to the friends of the ConstMatrixView class

	* src/matpackI.cc: Changed matrix vector multiplication to use BLAS.

	* src/oem.*: Added more detailed timings.

	* src/test_linalg.cc: Added randomized testing for solve(...) and inv(...)

	* src/test_matpack.cc: Changed name of maximum_err(...) function.
	
	* src/test_oem.cc: Changed name of maximum_err(...) function.

	* src/test_utils.cc: Changed name of maximum_err(...) function to
	get_maximum_error(...) and added function to create random, positive
	definite matrices.

	* src/timings.*: Timings class that holds a set of timers to simplify
	profiling.
	

2015-11-26  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-369
	
	Added "strength" as option for "from propmat" wind jacobians.
	Agrees with individual components for optiomized observation
	directions.  Speed-up setting missing:  There is no reason to
	recalculate the dpropmat_dx for different frequency alterations.
	
	* src/jacobian.cc:  Key for this is set similar to how other
	options (u,v,w) works.
	
	* src/m_jacobian.cc:  Fixed error handling to allow setting
	the component.
	
	* src/rte.cc:  Set how to handle the individual components.

2015-11-20  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-368
	
	* src/absorption.h:  Declares find_broad_spec_locations so it
	can be used elsewhere.
	
	* src/{m_linerecord,methods}.cc:  Created
	(abs_linesChangeParameterForMatchingLines) to easier perturb